# bot-detection

./: README.md
deteccion-de-bots/: README.md
deteccion-de-bots-en-kick/: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
deteccion-de-bots-en-kick/data/: InfoDataserV2.md  MEJORAS.md  README.md
deteccion-de-bots-en-kick/data/interim/: dataset_1.csv  kick_bot_dataset_v2_metadata.txt
deteccion-de-bots-en-kick/data/processed/: kick_chat_datasetV3.csv
deteccion-de-bots-en-kick/data/raw/: Kick_Chat_Bot_Detection_dataset.csv  kick_bot_dataset_v2.csv  kick_chat_bot_datasetV1.csv
deteccion-de-bots-en-kick/docs/: data_dictionary.md  mkdocs.yml
deteccion-de-bots-en-kick/docs/docs/: index.md
deteccion-de-bots-en-kick/kick-bot-detection/: __init__.py  dataset.py  features.py  plots.py
deteccion-de-bots-en-kick/kick-bot-detection/modeling/: predict.py  train.py
deteccion-de-bots-en-kick/notebooks/: README.md
deteccion-de-bots-en-kick/notebooks/EDA/: Etiquetado.ipynb  ModeloFinal.ipynb  Validacion.ipynb  datasetinfo.ipynb  info.md
deteccion-de-bots-en-kick/reports/: Video.md
deteccion-de-bots-en-kick/src/data/: Info.md  Script_v3.py  generate_dataset.py  generate_datasetv2.py  scrpitv4.py
