[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kick-bot-detection"
version = "0.0.1"
description = "Sistema ML para detectar bots"
authors = [
  { name = "Agustin Morales" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["kick-bot-detection"]
include = ["pyproject.toml", "kick-bot-detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["kick-bot-detection"]
force-sort-within-sections = true

